tests/neg-custom-args/captures/i23431.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23431.scala:8:13 ----------------------------------------
8 |      myIO = io  // error, level mismatch
  |             ^^
  |             Found:    (io : IO^)
  |             Required: IO^²
  |
  |             where:    ^  refers to a fresh root capability in the type of parameter io
  |                       ^² refers to a fresh root capability in the type of variable myIO
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23431.scala:11:13 ---------------------------------------
11 |      myIO = io2  // error, level mismatch
   |             ^^^
   |             Found:    (io2 : IO^)
   |             Required: IO^²
   |
   |             where:    ^  refers to a fresh root capability in the type of parameter io2
   |                       ^² refers to a fresh root capability in the type of variable myIO
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23431.scala:12:12 ---------------------------------------
12 |    withIO: io3 =>  // error
   |            ^
   |Found:    (io3: IO^?) ->? Unit
   |Required: IO^ => Unit
   |
   |where:    => refers to a fresh root capability created in anonymous function of type (io1: IO^): Unit when checking argument to parameter op of method withIO
   |          ^  refers to the universal root capability
13 |      myIO = io3
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i23431.scala:6:14 -------------------------------------------------------------
6 |    var myIO: IO^ = io1  // error: separation
  |              ^^^
  |              Separation failure: variable myIO's type IO^ hides parameter io1.
  |              The parameter needs to be annotated with @consume to allow this.
